# PunamIDE

./: .env.example  .gitignore  AI_STREAMING_AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  DEBUGGER_KNOWN_ISSUES.md  DEBUGGER_STATUS.md  MULTI_AGENT_WIRING_PLAN.md  PUNAM_FUTURE.md  PUNAM_NEXT.MD  PunamIDE_v2_1_Trust_Completion_Roadmap.md  README.md  SECURITY.md  autorun.bat  build_installers.bat  codebase-brain-audit.md  contextEngine.ts  eslint.config.js  kilo.json  npm-shrinkwrap.json  package-lock.json  package.json  punamIDE-v2.01.punam  punam_full_tech_stack_and_core_functionality.md  punam_future-roadmap.md  punam_improvement_roadmap.md  punam_ratings.md  punamv2.0Full-update.punam  refactor-plan.md  tsconfig.app.json  updated-improved.punam  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/queries/: python.scm  rust.scm  typescript.scm
src-tauri/src/: agent_tools.rs  autocomplete.rs  call_graph.rs  context_compressor.rs  dap_manager.rs  embedding_pipeline.rs  embeddings.rs  environment_scanner.rs  fs_commands.rs  git_commands.rs  index_commands.rs  lib.rs  lib_tests.rs  lsp_manager.rs  pty_manager.rs  safety.rs  search_commands.rs  security_scanner.rs  symbol_index.rs  terminal_commands.rs  workspace_import.rs
src-tauri/src/architecture/: dependency_analyzer.rs  rule_engine.rs
src-tauri/src/github/: actions.rs  gists.rs  issues.rs  mod.rs  pull_requests.rs  repos.rs
src-tauri/src/memory/: memory_engine.rs
src-tauri/src/snapshot/: mod.rs
(+679 files in other folders)
