[package]
name = "punamide"
version = "2.0.0"
description = "PunamIDE v2.0 - AI-powered code editor built with Tauri"
authors = ["you"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
notify-debouncer-mini = "0.5"
git2 = "0.19"
portable-pty = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
regex-lite = "0.1"
dirs = "5"
walkdir = "2"
zip = { version = "2.1", default-features = false, features = ["deflate"] }
sysinfo = "0.30"

[dev-dependencies]
tempfile = "3"
